--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<section class="game"> <!-- Guessing Section -->
 			
 			<h2 id="feedback">Make your Guess!</h2>
-
+			<div id="validate"></div>
 			<form>
 				<input type="text" name="userGuess" id="userGuess" class="text" maxlength="3" autocomplete="off" placeholder="Enter your Guess" required/>
       			<input type="submit" id="guessButton" class="button" name="submit" value="Guess"/>
